--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>jrebel</name>
+    <name>springboot_demo</name>
     <description>Demo project for Spring Boot With Scala And Java</description>
 
 
